# music_analysis

./: .gitignore  .pre-commit-config.yaml  README.md  logging.yaml  pyproject.toml  sample.env
configs/: my_favorite_tracks.yaml  new_release_track.yaml  study_bgm.yaml
docs/: 01_overview.md  02_audio.md  03_playlist_app.md
notebooks/: 01_artist_track_featues.ipynb  01_オーディオ特徴量調査.ipynb  02_artist_feature_analysis.ipynb  02_年代比較.ipynb  03_アーティスト比較.ipynb  04_アーティスト分析.ipynb  Untitled.ipynb  Untitled1.ipynb
scripts/: create_new_playlist.py  create_playlist_based_on_favorites.py  create_playlist_based_on_new_release.py  create_playlist_based_on_user_input.py
src/music_analysis/: consts.py
src/music_analysis/preprocess/: base.py  dalle.py  playlist.py  recommend.py  retrieve.py  tables.py
src/music_analysis/utils/: config.py  dataframe.py  image.py  log.py  utils.py
tests/: app.py
