[tool.poetry]
name = "music-analysis"
version = "0.1.0"
description = ""
authors = ["aug7atsushi"]
readme = "README.md"
packages = [{include = "music_analysis", from="src"}]


[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.1.2"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pandas = "^2.2.1"
spotipy = "^2.23.0"
python-dotenv = "^1.0.1"
scikit-learn = "^1.4.1.post1"
colorlog = "^6.8.2"
plotly = "^5.20.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
jupyterlab-code-formatter = "^2.2.1"
pytest = "^8.0.2"
pre-commit = "^3.6.2"
flake8-pyproject = "^1.2.3"
nbqa = "^1.8.4"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
